プロジェクト名変更。

--- a/Cube2X2BookReduce/Cube2X2BookReduce.csproj
+++ b/Cube2X2BookReduce/Cube2X2BookReduce.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{77F84DAC-FC9E-4CDD-94C5-DCF7562A8872}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Grayscale.Cube2x2BookReduce</RootNamespace>
-    <AssemblyName>Grayscale.cube2x2-book-reduce</AssemblyName>
+    <RootNamespace>Grayscale.Cube2X2BookReduce</RootNamespace>
+    <AssemblyName>Grayscale.Cube2X2BookReduce</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\bin\Debug\Grayscale.cube2x2-book-reduce.xml</DocumentationFile>
+    <DocumentationFile>..\bin\Debug\Grayscale.Cube2X2BookReduce.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,9 +32,15 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\bin\Release\Grayscale.cube2x2-book-reduce.xml</DocumentationFile>
+    <DocumentationFile>..\bin\Release\Grayscale.Cube2X2BookReduce.xml</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>Cube2X2BookReduce.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -53,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Cube2X2BookReduce.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
